Random hacks.. Tried clipPath but it's hopeless (won't export).. Need to find some other way of preventing paths from entering node holes

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ html, body {
 }
 .route .path {
   stroke-linejoin: round;
-  stroke-linecap: round;
+  stroke-linecap: butt;
   fill: none;
 }
 .route .node {
